--- a/sito/prova3/homepage.html
+++ b/sito/prova3/homepage.html
@@ -25,7 +25,20 @@
         </div>
     </ul>
 
+    <div style="position: relative; top: 1cm;">
+        <h1>Lavoro PCTO</h1>
+<h2>cosa</h2>
+<p>text</p>
+<h2>chi</h2>
+<p>text</p>
+<h2>come</h2>
+<p>text</p>
+</div>
 
+<div style="position: relative; top: 2cm;">
+<h2>Credits</h2>
+<p>text</p>
+</div>
 
 </body>
 </html>
