--- a/sito/prova3 copy/homepage.html
+++ b/sito/prova3 copy/homepage.html
@@ -25,7 +25,24 @@
         </div>
     </ul>
 
+    <div style="position: relative; top: 1cm;">
+        <h1>Lavoro PCTO</h1>
+<h2>text1</h2>
+<p>text1.1</p>
+<h2>text2</h2>
+<p>text2.2</p>
+<h2>text3</h2>
+<p>text3.3</p>
+</div>
 
+<div style="position: relative; top: 2cm;">
+    <a href="sito.html"><img src="c:\Users\Antonio\Desktop\Untitled_1.png"></a>
+</div>
+
+<div style="position: relative; bottom: -2cm;">
+<h2>Credits</h2>
+<p>credits</p>
+</div>
 
 </body>
 </html>
