--- a/sito/prova3 copy/3.html
+++ b/sito/prova3 copy/3.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <img src="c:\Users\Antonio\Desktop\Untitled.png" onclick="history.back()">
+    <img src="Go_back.png" onclick="history.back()">
     <div style="width: 100%;">
         <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
                 title="Genially senza titolo" frameborder="0" width="1200" height="675"
