--- a/sito/prova3/homepage.html
+++ b/sito/prova3/homepage.html
@@ -36,7 +36,7 @@
 </div>
 
 <div style="position: relative; top: 2cm;">
-    <a href="sito.html"><img src="c:\Users\Antonio\Desktop\Untitled_1.png"></a>
+    <a href="sito.html"><img src="Click_to_go.png"></a>
 </div>
 
 <div style="position: relative; bottom: -2cm;">
