--- a/sito/sito_2/timeline.html
+++ b/sito/sito_2/timeline.html
@@ -23,7 +23,7 @@
 
     <div class="tl-content">
       <h1>Filippo Tagliolini</h1>
-      <p>1790-1795, Biscuit, h. 62 cm, diametro 42 cm, marca assente, Galleria dell’Accademia Tadini, Lovere</p>
+      <p>1790-1795, Biscuit, h. 62 cm, diametro 42 cm, marca assente, Galleria dell'Accademia Tadini, Lovere</p>
     </div>
 
   </div>
@@ -39,7 +39,7 @@
 
     <div class="tl-content">
       <h1 class="f3 text--accent ttu">Antonio Canova</h1>
-      <p>1819-1821, Marmo di carrara, 220x124, 5 cm, Galleria dell’Accademia Tadini, Lovere, Cappella
+      <p>1819-1821, Marmo di carrara, 220x124, 5 cm, Galleria dell'Accademia Tadini, Lovere, Cappella
       </p>
     </div>
 
@@ -57,7 +57,7 @@
 
     <div class="tl-content">
       <h1 class="f3 text--accent ttu">Paris Bordon</h1>
-      <p>1526-1527, olio su tela, 218 x 156,6 cm, Galleria dell’Accademia Tadini, Lovere</p>
+      <p>1526-1527, olio su tela, 218 x 156,6 cm, Galleria dell'Accademia Tadini, Lovere</p>
     </div>
 
   </div>
@@ -74,7 +74,7 @@
 
     <div class="tl-content">
       <h1 class="f3 text--accent ttu">Carlo Francesco Nuvolone e Giuseppe Nuvolone</h1>
-      <p>1645-1650 circa, olio su tela, 157x118 cm, Galleria dell’Accademia Tadini, Lovere</p>
+      <p>1645-1650 circa, olio su tela, 157x118 cm, Galleria dell'Accademia Tadini, Lovere</p>
     </div>
 
   </div>
