--- a/sito/sito_1/homepage.html
+++ b/sito/sito_1/homepage.html
@@ -36,7 +36,7 @@
 </div>
 
 <div style="position: relative; top: 2cm;">
-    <a href="sito.html"><img src="Click_to_go.png"></a>
+    <a href="sito.html"><img src="Click_to_go.jpg"></a>
 </div>
 
 <div style="position: relative; bottom: -2cm;">
