--- a/sito/sito_1/homepage.html
+++ b/sito/sito_1/homepage.html
@@ -27,12 +27,8 @@
 
     <div style="position: relative; top: 1cm;">
         <h1>Lavoro PCTO</h1>
-<h2>text1</h2>
-<p>text1.1</p>
-<h2>text2</h2>
-<p>text2.2</p>
-<h2>text3</h2>
-<p>text3.3</p>
+<h2>Progetto PCTO (ex-alternanza scuola-lavoro)</h2>
+<p>Svolto dai ragazzi della classe 4ªA LIC (anno 23/24) dell'istituto Olivelli-Putelli di Darfo Boario Terme in collaborazione con Accademia Tadini di Lovere.</p>
 </div>
 
 <div style="position: relative; top: 2cm;">
