--- a/sito/2.html
+++ b/sito/2.html
@@ -17,7 +17,7 @@
         <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
                 title="Genially senza titolo" frameborder="0" width="1200" height="675"
                 style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                src="https://view.genial.ly/663214b0d216ea00148f0cfb" type="text/html" allowscriptaccess="always"
+                src="https://view.genially.com/65eae2a92cc75d0013c02479" type="text/html" allowscriptaccess="always"
                 allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div>
     </div>
 
